--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "css-loader": "^0.23.1",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
